Clean code, added one more collection